Fixed some spacing in the CSS

--- a/CSS/main.css
+++ b/CSS/main.css
@@ -34,12 +34,12 @@ div.topbar {
     text-decoration: underline;
 }
 
-#batman-logo1{
+#batman-logo1 {
     max-height: 4rem;
     max-width: auto;
 }
 
-.history1, .features{
+.history1, .features {
     font-family: batmanFont;
     font-size: 125%;
     color: rgba(205, 205, 205, 1);
@@ -56,7 +56,24 @@ div.topbar {
     line-height: 1.3;
 }
 
-#stats-image{
+.links {
+    font-family: batmanFont;
+    font-size: 125%;
+    color: rgba(205, 205, 205, 1);
+    padding: 2rem;
+    background-color: rgba(52, 52, 52, 0);
+    box-shadow: 0.2rem 0.2rem 0.5rem 0.5rem rgba(0, 0, 0, 0.2);
+    margin-top: 0.5rem;
+    float: left;
+    background-color: rgba(0, 0, 0, 0.2);
+    background-position: center;
+    background-repeat: no-repeat;
+    margin-left: 2rem;
+    margin-right: 2rem;
+    line-height: 1.3;
+}
+
+#stats-image {
     box-shadow: 0.2rem 0.2rem 0.5rem 0.5rem rgba(0, 0, 0, 0.2);
     margin-top: 7.5rem;
     margin-left: 2rem;
@@ -64,12 +81,12 @@ div.topbar {
     max-width: 49rem;
 }
 
-.stats-div{
+.stats-div {
     float: right;
     max-width: 32rem;
 }
 
-#stats-header{
+#stats-header {
     font-family: batmanFont;
     color: var(--batman-color);
     padding: 2rem;
@@ -77,7 +94,7 @@ div.topbar {
     background-color: rgba(0, 0, 0, 0.2);
 }
 
-#stats-block{
+#stats-block {
     font-family: batmanFont;
     font-size: 160%;
     color: rgba(205, 205, 205, 1);
@@ -94,7 +111,7 @@ h1 {
     color: var(--batman-color);
 }
 
-#batmobile-60s, #patent-image{
+#batmobile-60s, #patent-image {
     float: right;
     max-width: 45rem;
     max-height: auto;
@@ -102,20 +119,20 @@ h1 {
     box-shadow: 0.2rem 0.2rem 0.3rem 0.5rem rgba(0, 0, 0, 0.2);
     margin-right: 2rem;
 }
-#patent-image{
+#patent-image {
     max-width: 25rem;
     height: auto;
     margin-top: 2rem;
 }
 
-img#test-image{
+img#test-image {
     display: block;
     max-width: 45rem;
     max-height: auto;
     margin: 2.5rem auto auto auto;
     box-shadow: 0.1rem 0.1rem 0.6rem 0.3rem rgba(0, 0, 0, 0.5);
 }
-p#test-text, h1#test-text{
+p#test-text, h1#test-text {
     display: block;
     margin: 1rem auto auto auto;
     text-align: center;
@@ -124,7 +141,7 @@ p#test-text, h1#test-text{
     max-width: 32rem;
 }
 
-.small-stats{
+.small-stats {
     display: none;
 }
 
@@ -142,63 +159,63 @@ p#test-text, h1#test-text{
         max-width: auto;
     }
 
-    .history1, .features{
+    .history1, .features {
         line-height: 1.2;
         font-size: 150%;
         max-width: 85%;
     }
 
-    #batmobile-60s{
+    #batmobile-60s {
         float: none;
         max-width: 30rem;
         display: block;
         margin-left: auto;
         margin-right: auto;
     }
-    #patent-image{
+    #patent-image {
         max-width: 18rem;
         margin-left: 1rem;
     }
 }
 
 @media (max-width: 1882px) {
-    #stats-image{
+    #stats-image {
         max-width: 40rem;
         margin-top: 9.5rem;
     }
 }
 
 @media (max-width: 1739px) {
-    #stats-image{
+    #stats-image {
         max-width: 30rem;
         margin-top: 12rem;
     }
 }
 
 @media (max-width: 1578px) {
-    #stats-block{
+    #stats-block {
         font-size: 120%;
     }
 }
 
 @media (max-width: 1345px) {
-    #stats-block{
+    #stats-block {
         display: none;
     }
-    .stats-div{
+    .stats-div {
         display: none;
     }
-    #stats-header{
+    #stats-header {
         display: none;
     }
-    #stats-image{
+    #stats-image {
         display: none;
     }
 
-    .small-stats{
+    .small-stats {
         display: block;
     }
-    #small-stats-block{
+    #small-stats-block {
         font-family: batmanFont;
         font-size: 160%;
         color: rgba(205, 205, 205, 1);
@@ -206,12 +223,12 @@ p#test-text, h1#test-text{
         box-shadow: 0.2rem 0.2rem 0.5rem 0.5rem rgba(0, 0, 0, 0.2);
         background-color: rgba(0, 0, 0, 0.2);
     }
-    #small-stats-header{
+    #small-stats-header {
         text-align: center;
         font-family: batmanFont;
         color: var(--batman-color);
     }
-    #small-stats-image{
+    #small-stats-image {
         display: block;
         margin-left: auto;
         margin-right: auto;
@@ -221,7 +238,7 @@ p#test-text, h1#test-text{
         box-shadow: 0.2rem 0.2rem 0.5rem 0.5rem rgba(0, 0, 0, 0.2);
         margin-top: 3rem;
     }
-    .features{
+    .features {
         margin-top: 0rem;
     }
 }
